spacing fixes

--- a/style.css
+++ b/style.css
@@ -34,10 +34,12 @@ body {
 }
 
 #page-header {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    padding-top: 10px;
+    padding-bottom: 20px;
     height: 80px;
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 600;
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #4aaaa5;
     border-bottom: 2px solid lightgray;
@@ -45,17 +47,15 @@ body {
 
 #name {
     padding-top: 20px;
-    padding-left: 10px;
     margin-right: 30px;
     color: white;
     background: #4aaaa5;
     height: 100%;
     width: 220px;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: 600;
     text-align: center;
-    font-weight: 700;
     height: 80px;
     background: #4aaaa5;
 }
